fixed spacing and video metta

--- a/src/components/Childrens/Childrens.css
+++ b/src/components/Childrens/Childrens.css
@@ -106,7 +106,7 @@
 }
 
 .reviews-praise {
-  margin-top: 40px;
+  margin-top: 60px;
   padding-left: 60px;
   padding-right: 60px;
 }
@@ -126,11 +126,32 @@
   margin-right: 10%;
 }
 
+.praise-name {
+  color: #000;
+  text-transform: uppercase;
+  margin-top: 20px;
+  margin-bottom: 5px;
+  font-family: Urbanist, sans-serif;
+  font-size: 20px;
+  font-weight: 700;
+  line-height: 28px;
+}
+
+.praise-footer {
+  color: #000;
+  font-family: Urbanist, sans-serif;
+  font-size: 16px;
+  font-weight: 600;
+  line-height: 24px;
+}
+
 .praise-cont {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
   margin: 0 3%;
+  padding-bottom: 200px;
+  padding-top: 40px;
 }
 
 .praise-vid {
@@ -157,6 +178,7 @@
   font-size: 16px;
   font-weight: 600;
   line-height: 24px;
+  padding-top: 20px;
 }
 
 .together {
