--- a/src/components/Navbar/navbar.css
+++ b/src/components/Navbar/navbar.css
@@ -1,7 +1,7 @@
 .nav-container {
   display: flex;
   flex-direction: row;
-  height: 53px;
+  height: 70px;
   width: 100%;
   align-items: center;
   font-family: "Roboto", sans-serif;
